--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 
     <article class="box box3">
       <div class="description">
-      <img src="./images/icon-luxury.svg" alt="Luxury icon">
-      <h1>Luxury</h1>
-      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-        rental and arrive in style.</p>
+        <img src="./images/icon-luxury.svg" alt="Luxury icon">
+        <h1>Luxury</h1>
+        <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+          rental and arrive in style.</p>
       </div>
       <button class="button button3">Learn More</button>
     </article>
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Roger Gonçalves</a>.
+    Coded by <a href="https://github.com/gabirueitz">Roger Gonçalves</a>.
   </div>
 </body>
 
